Fixing iframe flicker

--- a/src/components/code-cell.css
+++ b/src/components/code-cell.css
@@ -1,5 +1,11 @@
+.proggres-wrapper {
+    height: 100%;
+    flex-grow: 1;
+    background-color: white;
+}
 .proggres-cover {
     height: 100%;
+    width: 100%;
     flex-grow: 1;
     background-color: white;
     display: flex;
